Fix intercom & impersonation on mobile

--- a/src/routes/SignIn/components/SignInView.scss
+++ b/src/routes/SignIn/components/SignInView.scss
@@ -2,6 +2,7 @@
   background: url('static/bg.jpg') center center no-repeat;
   background-size: cover;
   height: 100%;
+  min-height: 700px;
   display: flex;
   align-items: center;
   justify-content: center;
